--- a/index.html
+++ b/index.html
@@ -233,7 +233,11 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
     </p>
 
     <div class="botones">
-        <a href="https://www.instagram.com/hikarimasajes_/" class="btn instagram" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a href="https://www.instagram.com/hikarimasajes_/?utm_source=ig_web_copy_link" 
+   class="btn instagram" target="_blank" rel="noopener noreferrer">
+   Instagram
+</a>
+
         <a href="https://www.facebook.com/share/1DqqmokqTY/" class="btn facebook" target="_blank" rel="noopener noreferrer">Facebook</a>
         <a href="https://wa.me/542477614884" class="btn whatsapp" target="_blank" rel="noopener noreferrer">WhatsApp</a>
     </div>
@@ -245,5 +249,6 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
 
 </body>
 </html>
+
 
 
