--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
     </p>
 
     <div class="botones">
-        <a href="https://www.instagram.com/hikarimasajes_/?utm_source=ig_web_copy_link" 
+        <a href="https://linktr.ee/hikarimasajes_" 
    class="btn instagram" target="_blank" rel="noopener noreferrer">
    Instagram
 </a>
@@ -249,6 +249,7 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
 
 </body>
 </html>
+
 
 
 
