--- a/index.html
+++ b/index.html
@@ -233,10 +233,8 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
     </p>
 
     <div class="botones">
-        <a href="https://linktr.ee/hikarimasajes_" 
-   class="btn instagram" target="_blank" rel="noopener noreferrer">
-   Instagram
-</a>
+       <a href="https://linktr.ee/hikarimasajes_" class="btn instagram" target="_blank" rel="noopener noreferrer">Instagram</a>
+
 
         <a href="https://www.facebook.com/share/1DqqmokqTY/" class="btn facebook" target="_blank" rel="noopener noreferrer">Facebook</a>
         <a href="https://wa.me/542477614884" class="btn whatsapp" target="_blank" rel="noopener noreferrer">WhatsApp</a>
@@ -249,6 +247,7 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
 
 </body>
 </html>
+
 
 
 
