--- a/index.html
+++ b/index.html
@@ -234,12 +234,9 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
 
     <div class="botones">
 
-        <a href="https://www.instagram.com/hikarimasajes_/?hl=es" 
-   class="btn instagram" 
-   target="_blank">
-   Instagram
+        <a href="https://www.instagram.com/hikarimasajes_/" target="_blank" rel="noopener">
+    <i class="fab fa-instagram"></i>
 </a>
-
         <a href="https://www.facebook.com/share/1DqqmokqTY/" class="btn facebook" target="_blank" rel="noopener noreferrer">Facebook</a>
         <a href="https://wa.me/542477614884" class="btn whatsapp" target="_blank" rel="noopener noreferrer">WhatsApp</a>
     </div>
@@ -251,6 +248,7 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
 
 </body>
 </html>
+
 
 
 
