--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
     <div class="botones">
 
         <a href="https://www.instagram.com/hikarimasajes_/" target="_blank" rel="noopener">
-    <i class="fab fa-instagram"></i>
+    noreferrer">Instagram</a>
 </a>
         <a href="https://www.facebook.com/share/1DqqmokqTY/" class="btn facebook" target="_blank" rel="noopener noreferrer">Facebook</a>
         <a href="https://wa.me/542477614884" class="btn whatsapp" target="_blank" rel="noopener noreferrer">WhatsApp</a>
@@ -248,6 +248,7 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
 
 </body>
 </html>
+
 
 
 
