--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
 
     <div class="botones">
 
-         <a href="https://www.instagram.com/share/hikarimasajes_/" class="btn instagram" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a href="https://www.instagram.com/hikarimasajes_" class="btn instagram" target="_blank">Instagram</a>
         <a href="https://www.facebook.com/share/1DqqmokqTY/" class="btn facebook" target="_blank" rel="noopener noreferrer">Facebook</a>
         <a href="https://wa.me/542477614884" class="btn whatsapp" target="_blank" rel="noopener noreferrer">WhatsApp</a>
     </div>
@@ -246,6 +246,7 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
 
 </body>
 </html>
+
 
 
 
