--- a/index.html
+++ b/index.html
@@ -1,59 +1,50 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hikari Masajes | Fernanda</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
 
+/* RESET */
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
 /* BODY */
 body{
-    margin:0;
     font-family: 'Poppins', sans-serif;
-    background-color:#0f1a1c;
-    color:#e0e0e0;
+    background-color:#f5f2ec;
+    color:#3f4a4a;
 }
 
 /* HEADER */
 header{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
     text-align:center;
-    padding:120px 20px;
-    background: linear-gradient(rgba(15,26,28,0.6), rgba(15,26,28,0.6)), 
-            url('img/espacio4.jpeg');
+    height:100vh;
+    background: linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.4)), 
+                url('img/port3.jpeg');
     background-size:cover;
-    background-position:center;
+    background-position:center 35%;
 }
 
-/* LOGO RESPONSIVE */
 .logo{
-    max-width: 200px;
-    width: 50%;
-    height: auto;
-    display: block;
-    margin: 0 auto 20px;
-}
-
-header h1{
-    font-family:'Playfair Display', serif;
-    font-size:48px;
-    letter-spacing:2px;
-    margin:0;
-    color:#a3d9c9;
-    text-shadow: 1px 1px 8px rgba(0,0,0,0.7);
+    width:200px;
+    max-width:70%;
+    margin-bottom:20px;
+    filter: drop-shadow(0px 10px 20px rgba(0,0,0,0.15));
 }
 
 header p{
     font-size:18px;
-    margin-top:15px;
-    color:#cfe8df;
+    letter-spacing:1px;
 }
 
 /* SECCIONES */
 section{
-    padding:60px 20px;
+    padding:80px 20px;
     max-width:1100px;
     margin:auto;
 }
@@ -61,69 +52,70 @@ section{
 h2{
     font-family:'Playfair Display', serif;
     text-align:center;
-    margin-bottom:40px;
-    font-size:32px;
-    color:#a3d9c9;
+    margin-bottom:50px;
+    font-size:34px;
+    color:#2f3e3e;
 }
 
 /* SERVICIOS */
 .servicios{
     display:grid;
-    grid-template-columns:repeat(auto-fit, minmax(250px,1fr));
+    grid-template-columns:repeat(auto-fit, minmax(280px,1fr));
     gap:30px;
 }
 
 .card{
-    background: linear-gradient(145deg, #162729, #1e3131);
+    background:white;
     padding:25px;
-    border-radius:15px;
-    box-shadow:0 0 20px rgba(0,0,0,0.5);
+    border-radius:18px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.07);
     transition:0.3s;
 }
 
 .card:hover{
-    transform:translateY(-5px);
-    box-shadow:0 0 25px rgba(163,217,201,0.5);
+    transform:translateY(-6px);
 }
 
 .card h3{
-    margin-top:0;
-    color:#a3d9c9;
+    font-family:'Playfair Display', serif;
+    margin-bottom:15px;
+    color:#2f3e3e;
+    font-size:20px;
 }
 
 .card p{
+    font-size:14px;
     line-height:1.6;
-    color:#e0e0e0;
 }
 
-/* BOTONES CONSULTAR */
 .btn-consultar{
     display:inline-block;
-    margin-top:15px;
-    padding:12px 20px;
+    margin-top:20px;
+    padding:10px 22px;
     border-radius:30px;
     text-decoration:none;
+    background:#8fbfb2;
     color:white;
     font-weight:500;
-    background: #6fbfb2;
     transition:0.3s;
 }
 
 .btn-consultar:hover{
-    background:#7fd1c3;
-    transform:translateY(-2px);
+    background:#6e9f90;
 }
 
 /* SOBRE */
 .sobre{
     text-align:center;
     line-height:1.7;
-    color:#cfe8df;
+    max-width:700px;
+    margin:auto;
 }
 
+/* BOTONES REDES */
 .botones{
     text-align:center;
-    margin-top:30px;
+    margin-top:40px;
 }
 
 .btn{
@@ -137,43 +129,60 @@ h2{
     transition:0.3s;
 }
 
-.instagram{ background:#A98274; }
-.facebook{ background:#6b8ea6; }
-.whatsapp{ background:#6fbfb2; }
+.instagram{ background:#b89c8e; }
+.facebook{ background:#9fb4c4; }
+.whatsapp{ background:#8fbfb2; }
 
 .btn:hover{
-    opacity:0.85;
+    transform:translateY(-3px);
+    opacity:0.9;
 }
 
-/* FOOTER */
+/* WHATSAPP FLOTANTE */
+.whatsapp-fijo{
+    position:fixed;
+    bottom:20px;
+    right:20px;
+    background:#8fbfb2;
+    color:white;
+    padding:15px 18px;
+    border-radius:50px;
+    text-decoration:none;
+    font-size:14px;
+    box-shadow:0 5px 20px rgba(0,0,0,0.2);
+    z-index:1000;
+}
+
+.whatsapp-fijo:hover{
+    background:#6e9f90;
+}
+
+/* RESPONSIVE - SERVICIOS DESLIZABLES EN CELU */
+@media(max-width:768px){
+
+    header{
+        height:90vh;
+    }
+
+    .servicios{
+        display:flex;
+        overflow-x:auto;
+        gap:20px;
+        padding-bottom:10px;
+    }
+
+    .card{
+        min-width:280px;
+        flex:0 0 auto;
+    }
+}
+
 footer{
     text-align:center;
-    padding:20px;
-    background:#162729;
+    padding:25px;
+    background:#eee8e1;
     font-size:14px;
-    color:#cfe8df;
-}
-
-/* RESPONSIVE */
-@media(max-width:768px){
-    header{
-        padding:100px 20px;
-        background-position:center 20%;
-    }
-
-    .logo{
-        max-width:150px;
-        width:60%;
-        margin-bottom:15px;
-    }
-
-    header h1{
-        font-size:36px;
-    }
-
-    header p{
-        font-size:16px;
-    }
+    margin-top:60px;
 }
 
 </style>
@@ -182,7 +191,7 @@ footer{
 <body>
 
 <header>
-    <h1>HIKARI MASAJES</h1>
+    <img src="img/logo1.png" class="logo">
     <p>Bienestar físico y armonía interior</p>
 </header>
 
@@ -192,32 +201,27 @@ footer{
     <div class="servicios">
 
         <div class="card">
-            <h3>Masaje Relajación Integral (60 minutos)</h3>
-            <p>Técnica suave y armoniosa que induce a un estado profundo de bienestar.
-Reduce el estrés, la ansiedad y mejora la calidad del sueño.
-Un momento de pausa para reconectar cuerpo y mente.</p>
-            <a href="https://wa.me/542477614884?text=Hola,%20quiero%20consultar%20por%20el%20Masaje%20Relajación%20Integral" class="btn-consultar" target="_blank">Consultar</a>
+            <h3>Relajación Integral</h3>
+            <p>Sesión terapéutica de presión suave y movimientos envolventes que activan el sistema nervioso parasimpático, favoreciendo la relajación profunda y la regulación del estrés.</p>
+            <a href="https://wa.me/542477614884" class="btn-consultar" target="_blank">Consultar</a>
         </div>
 
         <div class="card">
-            <h3>✨Masaje Localizado (45 minutos)</h3>
-            <p>Alivia la tensión en la zona que más lo necesita: espalda, cervicales o piernas. Ideal para músculos cargados, mejora la circulación y devuelve movilidad y bienestar.</p>
-            <a href="https://wa.me/542477614884?text=Hola,%20quiero%20consultar%20por%20el%20Masaje%20Localizado" class="btn-consultar" target="_blank">Consultar</a>
+            <h3>Masaje Localizado</h3>
+            <p>Enfocado en zonas específicas como espalda, cervicales o piernas. Alivia tensiones acumuladas y mejora la movilidad muscular.</p>
+            <a href="https://wa.me/542477614884" class="btn-consultar" target="_blank">Consultar</a>
         </div>
 
         <div class="card">
-            <h3>✨Masaje Descontracturante Profundo (60 minutos)</h3>
-            <p>Terapia manual enfocada en aliviar tensiones profundas, contracturas y sobrecarga muscular.
-               Ideal para personas con estrés físico, trabajo sedentario o dolor localizado.
-               Favorece la circulación, mejora la movilidad y restablece el equilibrio corporal.</p>
-            <a href="https://wa.me/542477614884?text=Hola,%20quiero%20consultar%20por%20el%20Masaje%20Descontracturante" class="btn-consultar" target="_blank">Consultar</a>
+            <h3>Descontracturante Profundo</h3>
+            <p>Terapia manual orientada a contracturas y sobrecargas musculares. Favorece la circulación y restablece el equilibrio corporal.</p>
+            <a href="https://wa.me/542477614884" class="btn-consultar" target="_blank">Consultar</a>
         </div>
 
         <div class="card">
-            <h3>✨Masaje Reductor/Modelador (45 minutos)</h3>
-            <p>Técnica manual intensa que ayuda a movilizar adiposidad localizada y mejorar la apariencia de la piel.
-Complementa procesos estéticos desde una mirada terapéutica integral.</p>
-            <a href="https://wa.me/542477614884?text=Hola,%20quiero%20consultar%20por%20el%20Masaje%20Reductor/Modelador" class="btn-consultar" target="_blank">Consultar</a>
+            <h3>Reductor / Modelador</h3>
+            <p>Técnica manual intensa que estimula tejidos y ayuda a mejorar la apariencia corporal desde una mirada terapéutica integral.</p>
+            <a href="https://wa.me/542477614884" class="btn-consultar" target="_blank">Consultar</a>
         </div>
 
     </div>
@@ -227,18 +231,20 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
     <h2>Sobre Hikari</h2>
     <p>
         Soy Fernanda, creadora de Hikari.  
-        Un espacio pensado para brindar bienestar, alivio y equilibrio.  
-        Cada sesión es personalizada, enfocada en escuchar tu cuerpo  
-        y acompañar tu proceso de relajación y recuperación.
+        Un espacio diseñado para brindar bienestar, alivio y equilibrio.  
+        Cada sesión es personalizada, respetando los tiempos y necesidades de cada persona.
     </p>
 
     <div class="botones">
-
-        <a href="https://www.instagram.com/hikarimasajes_" class="btn instagram" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/share/1DqqmokqTY/" class="btn facebook" target="_blank" rel="noopener noreferrer">Facebook</a>
-        <a href="https://wa.me/542477614884" class="btn whatsapp" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+        <a href="https://www.instagram.com/hikarimasajes_/" class="btn instagram" target="_blank">Instagram</a>
+        <a href="https://www.facebook.com/" class="btn facebook" target="_blank">Facebook</a>
+        <a href="https://wa.me/542477614884" class="btn whatsapp" target="_blank">WhatsApp</a>
     </div>
 </section>
+
+<a href="https://wa.me/542477614884" class="whatsapp-fijo" target="_blank">
+    WhatsApp
+</a>
 
 <footer>
     © 2026 Hikari Masajes - Fernanda
@@ -247,7 +253,10 @@ Complementa procesos estéticos desde una mirada terapéutica integral.</p>
 </body>
 </html>
 
+   
 
+
+  
 
 
 
