Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -22,22 +22,27 @@
     <div class="servicios">
         <div class="card">
             <h3>Relajación Integral</h3>
-            <p>Sesión terapéutica de presión suave y movimientos envolventes que activan el sistema nervioso parasimpático, favoreciendo la relajación profunda y la regulación del estrés.</p>
+            <p>Sesión terapéutica de presión suave y movimientos envolventes
+                que activan el sistema nervioso parasimpático, favoreciendo
+                la relajación profunda y la regulación del estrés.</p>
             <a href="https://wa.me/542477614884" class="btn-consultar" target="_blank">Consultar</a>
         </div>
         <div class="card">
             <h3>Masaje Localizado</h3>
-            <p>Enfocado en zonas específicas como espalda, cervicales o piernas. Alivia tensiones acumuladas y mejora la movilidad muscular.</p>
+            <p>Enfocado en zonas específicas como espalda, cervicales o piernas. 
+                Alivia tensiones acumuladas y mejora la movilidad muscular.</p>
             <a href="https://wa.me/542477614884" class="btn-consultar" target="_blank">Consultar</a>
         </div>
         <div class="card">
             <h3>Descontracturante Profundo</h3>
-            <p>Terapia manual orientada a contracturas y sobrecargas musculares. Favorece la circulación y restablece el equilibrio corporal.</p>
+            <p>Terapia manual orientada a contracturas y sobrecargas musculares. 
+                Favorece la circulación y restablece el equilibrio corporal.</p>
             <a href="https://wa.me/542477614884" class="btn-consultar" target="_blank">Consultar</a>
         </div>
         <div class="card">
             <h3>Reductor / Modelador</h3>
-            <p>Técnica manual intensa que estimula tejidos y ayuda a mejorar la apariencia corporal desde una mirada terapéutica integral.</p>
+            <p>Técnica manual intensa que estimula tejidos y ayuda a mejorar la apariencia 
+                corporal desde una mirada terapéutica integral.</p>
             <a href="https://wa.me/542477614884" class="btn-consultar" target="_blank">Consultar</a>
         </div>
     </div>
@@ -97,6 +102,7 @@
 
 
   
+
 
 
 
