Fix HTML formatting and clean up code

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <div class="servicios">
         <div class="card">
             <h3>Relajación Integral</h3>
-            <p>Sesión terapéutica de presión suave y movimientos envolventes
-                que activan el sistema nervioso parasimpático, favoreciendo
-                la relajación profunda y la regulación del estrés.</p>
+            <p>Sesión terapéutica de presión suave y 
+                movimientos envolventes
+                que activan el sistema nervioso 
+                parasimpático, favoreciendo
+                la relajación profunda y 
+                la regulación del estrés.</p>
             <a href="https://wa.me/542477614884" class="btn-consultar" target="_blank">Consultar</a>
         </div>
         <div class="card">
@@ -102,6 +105,7 @@
 
 
   
+
 
 
 
